Rename encounter to test order.

--- a/cdx_core/config/locales/controllers/api.en.yml
+++ b/cdx_core/config/locales/controllers/api.en.yml
@@ -8,7 +8,7 @@ en:
       response: 'Response for activation request'
 
     encounters_controller:
-      file_name: 'Encounters-'
+      file_name: 'Test-orders-'
 
     tests_controller:
       file_name: 'Tests-'
