--- a/cdx_core/config/locales/controllers/controllers.en.yml
+++ b/cdx_core/config/locales/controllers/controllers.en.yml
@@ -31,12 +31,12 @@ en:
     logs_requested: 'Client logs requested'
 
   encounters_controller:
-    test_order_cancelled: 'Test Order Cancelled'
-    test_order: 'Test Order'
+    test_order_cancelled: 'Test order Cancelled'
+    test_order: 'Test order'
     cancelled: 'Cancelled'
-    encounter_deleted: 'Encounter was successfully deleted.'
+    encounter_deleted: 'Test order was successfully deleted.'
     sample_id_used: 'This sample ID has already been used for another patient'
-    test_order_created: 'New Test Order Created'
+    test_order_created: 'New Test order created'
     new: 'New'
     test_created: 'Test Created'
     test: 'Test'
@@ -114,4 +114,3 @@ en:
     col_name: 'Full name'
     col_roles: 'Roles'
     col_last_activity: 'Last activity'
-    
