Label changes for the Add Test screen (2222,2223)

--- a/cdx_core/config/locales/views/js_screen_views.en.yml
+++ b/cdx_core/config/locales/views/js_screen_views.en.yml
@@ -193,7 +193,7 @@ en:
       weeks_in_treatment_label: "Weeks in treatment:"
       samples_id_label: "Samples Id:"
       sample_type_label: "Sample type:"
-      test_due_date_label: "Test due date:"
+      test_due_date_label: "Collection date:"
       status_label: "Status:"
       update_btn: "Update Test Order"
       cancel_confirm_msg: "You are about to permanently cancel this test order. Are you sure you want to proceed?"
@@ -228,14 +228,14 @@ en:
       sputum_option: "sputum"
       blood_option: "Blood"
       other_option: "Other - Please Specify"
-      test_due_date_label: "Test Due Date"
+      test_due_date_label: "Collection Date"
       save_btn: "Save"
       cancel_btn: "Cancel"
       diagnosis_lable: "Diagnosis"
       follow_up_lable: "Follow-Up"
       weeks_in_treatment_label: "Weeks in treatment"
       comment: "Comment"
-      presumptive: "Presumptive RR-TB/MDR-TB"
+      presumptive: "RR-TB/MDR-TB Suspect"
 
     outstanding_tests_table:
       outstanding_tests_title: "Outstanding Tests"
