Include js files in cdx_vietnam.

--- a/cdx_vietnam/config/locales/views/cdx_vietnam/patients.en.yml
+++ b/cdx_vietnam/config/locales/views/cdx_vietnam/patients.en.yml
@@ -1,4 +1,6 @@
 en:
   patients:
     form:
-      social_security_code_tooltip: 'SSID of the patient.'
+      social_security_code: 'CMND'
+      wrong_social_security_number: "Your input does not confirm to the validation criteria (Min 9 characters Max 15). Do you want to save anyway?"
+      social_security_code_tooltip: "CMND (Min 9 characters Max 15)"
