--- a/cdx_core/config/locales/views/addresses.en.yml
+++ b/cdx_core/config/locales/views/addresses.en.yml
@@ -4,6 +4,7 @@ en:
       street_tooltip:   'A Street address'
       city_tooltip:     'A City name'
       state_tooltip:    'A State / County name'
+      country_tooltip:     'A Country name'
       zip_code_tooltip: 'A Postal / Zip Code'
       address: 'Address'
       city: 'City'
@@ -12,3 +13,4 @@ en:
       address_prefix: ''
       address1_prefix: 'Permanent '
       address2_prefix: 'Contact '
+      country: 'Country'
