Create test bach and requested tests.

--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -18,6 +18,10 @@ en:
         in_progress: 'In progress'
         pending_approval: 'Pending approval'
         approved: 'Approved'
+    patient_result:
+      status_options:
+        new: 'New'
+        completed: 'Completed'
     microscopy:
       visual_appearance:
         blood: 'Blood-stained'
