Improve status logic in encounters.

--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -21,6 +21,7 @@ en:
     patient_result:
       status_options:
         new: 'New'
+        rejected: 'Rejected'
         completed: 'Completed'
     microscopy:
       visual_appearance:
