Generate test result lines.

--- a/cdx_core/config/locales/views/culture_results.en.yml
+++ b/cdx_core/config/locales/views/culture_results.en.yml
@@ -1,5 +1,6 @@
 en:
   culture_results:
+    localised_name: 'Culture'
     new:
       header: 'Add Culture test result for: %{patient_name}'
       back: 'Back'
