--- a/cdx_core/config/locales/views/microscopy_results.en.yml
+++ b/cdx_core/config/locales/views/microscopy_results.en.yml
@@ -1,5 +1,6 @@
 en:
   microscopy_results:
+    localised_name: 'Microscopy'
     new:
       header: 'Add Microscopy test result for: %{patient_name}'
       back: 'Back'
