--- a/cdx_core/config/locales/views/xpert_results.en.yml
+++ b/cdx_core/config/locales/views/xpert_results.en.yml
@@ -1,5 +1,6 @@
 en:
   xpert_results:
+    localised_name: 'Xpert'
     new:
       header: 'Add Xpert MTB/RIF test result for: %{patient_name}'
       details_header: 'Details'
