--- a/cdx_core/config/locales/views/patients.en.yml
+++ b/cdx_core/config/locales/views/patients.en.yml
@@ -64,6 +64,7 @@ en:
       phone_tooltip: 'A Phone number the Patient can be contacted on'
       social_security_code_tooltip: 'Social security Id. of the patient.'
       medical_insurance_num_tooltip: 'Medical Insurance Number of the patient.'
+      copy_addr_button: 'Copy Address to other'
     index:
       no_patients: 'No patients registered'
       keep_organized: 'Keep your test orders organized under patients medical history'
