Update results to completed or rejected.

--- a/cdx_core/config/locales/views/patient_results.en.yml
+++ b/cdx_core/config/locales/views/patient_results.en.yml
@@ -3,3 +3,6 @@ en:
     update_samples:
       samples_updated: 'Sample Ids updated successfully.'
       updated_fail: 'Sample Ids can not be updated.'
+    update:
+      success: 'Result was updated successfully.'
+      failure: 'Result can not be updated.'
