--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -18,9 +18,18 @@ en:
         in_progress: 'In progress'
         pending_approval: 'Pending approval'
         approved: 'Approved'
+    test_batch:
+      status_options:
+        new: 'New'
+        samples_collected: 'Samples collected'
+        samples_received: 'Samples received'
+        in_progress: 'In progress'
+        closed: 'Closed'
     patient_result:
       status_options:
         new: 'New'
+        sample_collected: 'Sample collected'
+        sample_received: 'Sample received'
         in_progress: 'In progress'
         rejected: 'Rejected'
         completed: 'Completed'
