Remove requested tests.

--- a/cdx_core/config/locales/views/patient_results.en.yml
+++ b/cdx_core/config/locales/views/patient_results.en.yml
@@ -1,5 +1,7 @@
 en:
   patient_results:
+    validations:
+      rejected_no_comment: 'You need to add a comment explaining why the test is rejected.'
     update_samples:
       samples_updated: 'Sample Ids updated successfully.'
       updated_fail: 'Sample Ids can not be updated.'
