Adds pagination to patient history

--- a/cdx_core/config/locales/views/js_components.en.yml
+++ b/cdx_core/config/locales/views/js_components.en.yml
@@ -2,6 +2,8 @@ en:
   components:
     created: 'Created'
     updated: 'Last updated'
+    previous: 'Previous'
+    next: 'Next'
     alert_groups:
       col_name: "Name"
       tooltip_name: "This is the Name of the Alert."
