Improvements to buttons.

--- a/cdx_core/config/locales/views/js_components.en.yml
+++ b/cdx_core/config/locales/views/js_components.en.yml
@@ -53,6 +53,7 @@ en:
       status: 'status'
       new: 'New'
       samples_collected: 'Samples collected'
+      samples_received: 'Samples received'
       in_progress: 'In progress'
       closed: 'Closed'
       payment: 'Payment'
