Improve styles and presentation.

--- a/cdx_core/config/locales/views/encounters.en.yml
+++ b/cdx_core/config/locales/views/encounters.en.yml
@@ -7,6 +7,7 @@ en:
     show:
       test_order: 'Test order'
       no_encounter: 'Test order not found.'
+      delete_test_order: 'Delete test order'
     perform_encounter_action:
       merge: 'Cannot add a test or sample that belongs to a different %{entity_type}'
       error: 'Error %{action_name} %{class_name}'
