--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -31,6 +31,7 @@ en:
         sample_collected: 'Sample collected'
         sample_received: 'Sample received'
         in_progress: 'In progress'
+        pending_approval: 'Pending approval'
         rejected: 'Rejected'
         completed: 'Completed'
     microscopy:
