[Translation] Fix missing insurance number tooltip

--- a/cdx_vietnam/config/locales/views/patients.vi.yml
+++ b/cdx_vietnam/config/locales/views/patients.vi.yml
@@ -40,11 +40,13 @@ vi:
       estimate_age: 'Ước tính tuổi'
       history: 'Lịch sử'
       nickname_label: 'Biệt danh'
+      medical_insurance_num: 'Số sổ bảo hiểm y tế'
       entity_id_label: 'Mã thực thể'
       gender_label: 'Giới tính'
       birth_date_on_label: 'Ngày sinh'
       email_label: 'Email'
       phone_label: 'Điện thoại'
+      patient_id_tooltip: 'Số ID bệnh nhân'
       institution_tooltip: 'Tổ chức tiếp nhận bệnh nhân'
       nickname_tooltip: 'Biệt danh của bệnh nhân (nếu có)'
       entity_id_tooltip: 'Mã số bệnh nhân'
@@ -54,6 +56,7 @@ vi:
       email_tooltip: 'Địa chỉ email của bệnh nhân'
       phone_tooltip: 'Một số điện thoại có thể liên hệ được của bệnh nhân'
       social_security_code_tooltip: 'Số CMND của bệnh nhân'
+      medical_insurance_num_tooltip: 'Số sổ bảo hiểm y tế của bệnh nhân.'
     index:
       no_patients: 'Không có bệnh nhân nào đăng ký'
       keep_organized: 'Giữ cho yêu cầu xét nghiệm của bạn được tổ chức theo lịch sử y tế của bệnh nhân'
