Add Trace option to Xpert results

--- a/cdx_core/config/locales/models/xpert_result.en.yml
+++ b/cdx_core/config/locales/models/xpert_result.en.yml
@@ -7,4 +7,4 @@ en:
         result_on: 'Date of result'
         rifampicin: 'Rifampicin resistance'
         trace: 'Trace'
-        tuberculosis: 'M. tuberculosis'
+        tuberculosis: 'M. Tuberculosis Detection Volume'
