Update logs when deleting patients.

--- a/cdx_core/config/locales/views/patients.en.yml
+++ b/cdx_core/config/locales/views/patients.en.yml
@@ -39,6 +39,7 @@ en:
       audit_log: 'patient details have been updated'
     destroy:
       success: 'Patient was successfully deleted.'
+      audit_log: 'patient was successfully deleted.'
     form:
       institution_label: 'Institution'
       select_day: 'Select day'
