--- a/cdx_core/config/locales/views/js_components.en.yml
+++ b/cdx_core/config/locales/views/js_components.en.yml
@@ -60,18 +60,18 @@ en:
       samples_collected: 'Samples collected'
       samples_received: 'Samples received'
       in_progress: 'In progress'
-      closed: 'Closed'
       payment: 'Payment'
       false: 'Pending'
       true: 'Done'
     test_order:
       new: 'New'
       pending: 'Pending'
+      samples_collected: 'Samples collected'
+      samples_received: 'Samples received'
       recieved: 'Received'
       in_progress: 'In progress'
       pending_approval: 'Pending approval'
-      completed: 'Completed'
-
+      closed: 'Closed'
     alert_messages:
       col_name: "Name"
       col_date: "Date"
