--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -22,6 +22,7 @@ en:
     test_batch:
       status_options:
         new: 'New'
+        samples_collected: 'Samples collected'
         samples_received: 'Samples received'
         in_progress: 'In progress'
         closed: 'Closed'
