--- a/cdx_core/config/locales/views/js_components.en.yml
+++ b/cdx_core/config/locales/views/js_components.en.yml
@@ -57,6 +57,7 @@ en:
       header: 'Test batch'
       status: 'status'
       new: 'New'
+      samples_collected: 'Samples collected'
       samples_received: 'Samples received'
       in_progress: 'In progress'
       payment: 'Payment'
@@ -65,6 +66,7 @@ en:
     test_order:
       new: 'New'
       pending: 'Pending'
+      samples_collected: 'Samples collected'
       samples_received: 'Samples received'
       recieved: 'Received'
       in_progress: 'In progress'
