Audit test result status changes.

--- a/cdx_core/config/locales/views/patient_results.en.yml
+++ b/cdx_core/config/locales/views/patient_results.en.yml
@@ -6,5 +6,6 @@ en:
       samples_updated: 'Sample Ids updated successfully.'
       updated_fail: 'Sample Ids can not be updated.'
     update:
+      status_tracking: 'Test result status updated'
       success: 'Result was updated successfully.'
       failure: 'Result can not be updated.'
