--- a/cdx_core/config/locales/views/encounters.en.yml
+++ b/cdx_core/config/locales/views/encounters.en.yml
@@ -15,6 +15,8 @@ en:
       error: 'Error %{action_name} %{class_name}'
     edit:
       test_order: 'Test Order'
+    update:
+      status_tracking: 'Test order status updated'
     new_index:
       new_tests: 'New Tests'
       select_option: 'Please select one of the options below.'
