--- a/cdx_core/config/locales/models/patient.en.yml
+++ b/cdx_core/config/locales/models/patient.en.yml
@@ -12,8 +12,11 @@ en:
         created_at: 'Created at'
         nickname: 'Nickname'
         social_security_code: 'Social security ID'
+        medical_insurance_num: 'Medical Insurance Number'
+        external_id: 'External Patient ID'
+        external_patient_system: 'External Patient System'
   patient:
     model_form:
       wrong_date: 'should be a date in %{birth_date_on_placeholder}'
       wrong_gender: 'is not within valid options (should be one of %{gender_values})'
-      cant_change: "không thể thay đổi sau khi đã được phân công"
+      cant_change: "can't be changed after assigned"
