--- a/cdx_vietnam/config/locales/models/patient.vi.yml
+++ b/cdx_vietnam/config/locales/models/patient.vi.yml
@@ -15,4 +15,4 @@ vi:
     model_form:
       wrong_date: 'nên là một ngày trong %{birth_date_on_placeholder}'
       wrong_gender: 'giá trị không hợp lệ (nên là một trong %{gender_values})'
-      cant_change: "can't be changed after assigned"
+      cant_change: "không thể thay đổi sau khi đã được phân công"
