Show individual test order with each test result history logs.

--- a/cdx_core/config/locales/views/test_orders.en.yml
+++ b/cdx_core/config/locales/views/test_orders.en.yml
@@ -19,6 +19,7 @@ en:
       status: 'Status'
     state:
       order_id: 'Order ID'
+      sample_id: 'Sample ID'
       old_state: 'Previous state'
       new_state: 'Current state'
       created_at: 'Date'
