--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -15,6 +15,8 @@ en:
         new: 'New'
         pending: 'Pending'
         received: 'Received'
+        samples_collected: 'Samples collected'
+        samples_received: 'Samples received'
         in_progress: 'In progress'
         pending_approval: 'Pending approval'
         approved: 'Approved'
