--- a/cdx_core/config/locales/models/xpert_result.en.yml
+++ b/cdx_core/config/locales/models/xpert_result.en.yml
@@ -2,6 +2,7 @@ en:
   activerecord:
     attributes:
       xpert_result:
+        result_status: 'Status'
         sample_collected_on: 'Date sample collected'
         examined_by: 'Examined by'
         result_on: 'Date of result'
