--- a/cdx_vietnam/config/locales/devise.vi.yml
+++ b/cdx_vietnam/config/locales/devise.vi.yml
@@ -46,6 +46,7 @@ vi:
     sessions:
       signed_in: "Đăng nhập thành công."
       signed_out: "Đăng xuất thành công."
+      already_signed_out: "Đã đăng xuất trước đó."
     unlocks:
       send_instructions: "Bạn sẽ nhận được một email hướng dẫn cách mở khóa tài khoản của bạn trong vòng một vài phút."
       send_paranoid_instructions: "Nếu tài khoản của bạn tồn tại, bạn sẽ nhận được một email hướng dẫn cách mở khóa tài khoản trong vòng một vài phút."
