--- a/cdx_core/config/locales/views/test_orders.en.yml
+++ b/cdx_core/config/locales/views/test_orders.en.yml
@@ -23,3 +23,5 @@ en:
       old_state: 'Previous state'
       new_state: 'Current state'
       created_at: 'Date'
+    update:
+      not_allowed: "You don't have permission to update this test order."
