--- a/cdx_core/config/locales/views/episodes.en.yml
+++ b/cdx_core/config/locales/views/episodes.en.yml
@@ -8,6 +8,7 @@ en:
       episode_details: 'Episode Details'
       episode_type_not_available: 'This Episode Type is not currently available'
       hiv_status: 'Current HIV Status'
+      episode_previous_history_required: 'The Episodes Previous History option is required'
     create:
       new_episode: 'New episode created'
       episode_created: 'Episode successfully created.'
