[Translation] Compare and correct language files

--- a/cdx_core/config/locales/views/patients.en.yml
+++ b/cdx_core/config/locales/views/patients.en.yml
@@ -51,6 +51,7 @@ en:
       medical_insurance_num: 'Medical Insurance Number'
       entity_id_label: 'Entity id'
       external_id_label: 'External Patient ID'
+      success: 'Patient was successfully created.'
       gender_label: 'Gender'
       birth_date_on_label: 'Birth date on'
       email_label: 'Email'
